implementation all auth-services,include middleware for auth-service an control logout,verify and change-pass, include prisma orm model, gitignore:ignore prisma migrations
